--- a/src/peakrdl_python/templates/baseclass_tb.py.jinja
+++ b/src/peakrdl_python/templates/baseclass_tb.py.jinja
@@ -20,6 +20,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 {% from 'template_ultilities.py.jinja' import peakrdl_python_sim_lib with context %}
 {% from 'template_ultilities.py.jinja' import peakrdl_python_lib with context %}
+{% from 'template_ultilities.py.jinja' import peakrdl_python_lib_test with context %}
 {# the following defining the number relative steps up to the lib and sim_lib packages from the current file #}
 {% set lib_depth = 1 %}
 
@@ -27,6 +28,7 @@ from array import array as Array
 {% if asyncoutput %}
 import asyncio
 {% endif %}
+import unittest
 import random
 {% if legacy_enum_type %}
 from enum import IntEnum
@@ -49,6 +51,8 @@ from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_write_block{% if legacy_block_access %}_legacy{% endif %} as write_block_addr_space
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_read_block{% if not legacy_block_access %}_legacy{% endif %} as read_block_addr_space_alt
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_write_block{% if not legacy_block_access %}_legacy{% endif %} as write_block_addr_space_alt
+from {{ peakrdl_python_lib_test(depth=lib_depth) }} import AsyncLibTestBase as TestCaseBase
+BlockTestBase = unittest.IsolatedAsyncioTestCase
 {% else %}
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import dummy_read as read_addr_space
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import dummy_write as write_addr_space
@@ -56,6 +60,8 @@ from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import dummy_
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import dummy_write_block{% if legacy_block_access %}_legacy{% endif %} as write_block_addr_space
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import dummy_read_block{% if not legacy_block_access %}_legacy{% endif %} as read_block_addr_space_alt
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import dummy_write_block{% if not legacy_block_access %}_legacy{% endif %} as write_block_addr_space_alt
+from {{ peakrdl_python_lib_test(depth=lib_depth) }} import LibTestBase as TestCaseBase
+BlockTestBase = unittest.TestCase
 {% endif %}
 
 {% if not legacy_enum_type %}
@@ -83,36 +89,14 @@ from {{ peakrdl_python_lib(depth=lib_depth) }} import SystemRDLEnum, SystemRDLEn
 def random_enum_reg_value(enum_class: type[{% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}]) -> {% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}:
     return random.choice(list(enum_class))
 
-{% if asyncoutput %}
-TestCaseBase = unittest.IsolatedAsyncioTestCase
-{% else %}
-TestCaseBase = unittest.TestCase
-{% endif %}
 
 class {{top_node.inst_name}}_TestCase(TestCaseBase): # type: ignore[valid-type,misc]
 
     def setUp(self) -> None:
-        self.dut = RegModel(callbacks={% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if legacy_block_access %}Legacy{% endif %}(read_callback=read_callback,
-                                                          write_callback=write_callback))
+        self.dut = RegModel(callbacks={% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if legacy_block_access %}Legacy{% endif %}(read_callback=self.outer_read_callback,
+                                                          write_callback=self.outer_write_callback))
 
-    @staticmethod
-    def _reverse_bits(value: int, number_bits: int) -> int:
-        """
-
-        Args:
-            value: value to reverse
-            number_bits: number of bits used in the value
-
-        Returns:
-            reversed valued
-        """
-        result = 0
-        for i in range(number_bits):
-            if (value >> i) & 1:
-                result |= 1 << (number_bits - 1 - i)
-        return result
-
-class {{top_node.inst_name}}_TestCase_BlockAccess(TestCaseBase): # type: ignore[valid-type,misc]
+class {{top_node.inst_name}}_TestCase_BlockAccess(BlockTestBase): # type: ignore[valid-type,misc]
 
     def setUp(self) -> None:
         self.dut = RegModel(callbacks={% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if legacy_block_access %}Legacy{% endif %}(read_callback=read_callback,
@@ -120,7 +104,7 @@ class {{top_node.inst_name}}_TestCase_BlockAccess(TestCaseBase): # type: ignore[
                                                           read_block_callback=read_block_callback,
                                                           write_block_callback=write_block_callback))
 
-class {{top_node.inst_name}}_TestCase_AltBlockAccess(TestCaseBase): # type: ignore[valid-type,misc]
+class {{top_node.inst_name}}_TestCase_AltBlockAccess(BlockTestBase): # type: ignore[valid-type,misc]
     """
     Based test to use with the alternative call backs, this allow the legacy output API to be tested
     with the new callbacks and visa versa.
